[gd_scene format=3 uid="uid://pay_debt_popup"]

[ext_resource type="Script" path="res://Scripts/pay_debt_popup.gd" id="1_paydebt"]

[node name="PayDebtPopup" type="PopupPanel"]
title = "Repay Debt"
size = Vector2i(400, 320)
visible = true
script = ExtResource("1_paydebt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 396.0
offset_bottom = 316.0
theme_override_constants/separation = 15

[node name="Header" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 20
text = "ðŸ’¸ DEBT REPAYMENT"
horizontal_alignment = 1

[node name="InfoPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="VBoxContainer/InfoPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="InfoLabel" type="Label" parent="VBoxContainer/InfoPanel/Margin"]
unique_id_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Debt: $100,000
Wallet: $5,000"
horizontal_alignment = 1

[node name="SliderContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="VBoxContainer/SliderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Select Amount:"

[node name="AmountSlider" type="HSlider" parent="VBoxContainer/SliderContainer"]
unique_id_in_owner = true
layout_mode = 2

[node name="InputContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/InputContainer"]
layout_mode = 2
text = "$ "

[node name="AmountInput" type="LineEdit" parent="VBoxContainer/InputContainer"]
unique_id_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter amount to pay..."
alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ActionButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="CancelBtn" type="Button" parent="VBoxContainer/ActionButtons"]
unique_id_in_owner = true
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
text = "CANCEL"

[node name="ConfirmBtn" type="Button" parent="VBoxContainer/ActionButtons"]
unique_id_in_owner = true
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.9, 0.6, 1)
text = "PAY NOW"